--- a/development/requirements.txt
+++ b/development/requirements.txt
@@ -1,11 +1,8 @@
 # clrs benchmark dependecies
-# absl-py>=0.13.0
 attrs>=23.1.0
-# chex>=0.0.8
 numpy>=1.26.1
 opt-einsum>=3.3.0
 six>=1.16.0
-# toolz>=0.11.1
 torch>=2.1.0
 torchvision>=0.16.0
 transformers>=4.34.1
@@ -14,32 +11,22 @@ transformers>=4.34.1
 pillow
 
 # common ml packages
-transformers
-scikit-learn
-xgboost
-keras
-scipy
-numpy
-pandas
-matplotlib
-seaborn
-tqdm
-kaggle
+transformers>=4.43.1
+scikit-learn>=1.3.2
+xgboost>=2.0.1
+scipy>=1.11.3
+pandas>=2.1.1
+matplotlib>=3.8.2
+tqdm>=4.66.1
+kaggle>=1.5.16
 
 # llm
-openai
-anthropic
-langchain
-sentencepiece
-spacy
-nltk
-sacrebleu
-rouge-score
-peft
-accelerate
-evaluate
+openai>=1.17.1
+anthropic>=0.5.0
+langchain>=0.1.16
+sentencepiece>=0.1.99
+nltk>=3.8.1
+accelerate>=0.25.0
 
 #others
-cchardet
-pytest
-dacite
+dacite>=1.8.1
